# RAG_TEXT_SUMMARISER

./: README.md  main.py  pyproject.toml  requirements.txt
app/: page.tsx
components/: QuestionAnswering.tsx  Summarizer.tsx
components/ui/: radio-group.tsx
