[project]
name = "summarizer_qna"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikunj Gupta, Kanav Arora",email = "nikunjgupta609.com, kanavlt885@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    beautifulsoup4 = "4.12.3"
    cachetools = "5.5.0"
    fastapi = "0.115.6"
    keybert = "0.8.5"
    langchain = "0.3.15"
    langchain-community = "0.3.15"
    networkx = "3.3"
    nltk = "3.9.1"
    numpy = "1.23.0"
    gunicorn = "20.1.0"
    pydantic = "2.10.5"
    python-docx = "1.1.2"
    requests = "2.32.3"
    scikit-learn = "1.6.1"
    sentence-transformers = "3.3.1"
    torch = "2.4.1"
    uvicorn = "0.34.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
